feat: eureka implementation, loggers, checkstyle
